added css and finished html

--- a/index.html
+++ b/index.html
@@ -1,34 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
+
+
 </head>
 
 <body>
-    <h1>Student Bio</h1>
+    <header>
+        <h1>Student Bio</h1>
 
-    <h2>Ryan Thomas</h2>
+        <div id="main-bio">
+            <h2>Ryan Thomas</h2>
+            <img id="bio-image" src="https://placehold.it/200x200" alt="Ryan Thomas">
 
-    <img src="https://placehold.it/200x200" alt="Ryan Thomas">
+            <p id="main-bio">I'm from Kamas, UT but reside in Salt Lake City. I enjoy hiking, kayaking, <br>traveling,
+                football,
+                and
+                beekeeping.
 
-    <p>I'm from Kamas, UT but reside in Salt Lake City. I enjoy hiking, kayaking, traveling, football, and beekeeping.
-    </p>
+            </p>
+        </div>
+        <section id="contact-info">
+            <h3>Contact Info</h3>
 
-    <h3>Contact Info</h3>
+            <ul>
+                <li> Email: <a href="rythomas2525@gmail.com">rythomas2525@gmail.com</a>
+                </li>
+                <li>GitHub: <a href="https://github.com/rythomas2525">rythomas2525</a>
+                </li>
+                <li>Portfolio: <a href="">Coming Soon</a></li>
+            </ul>
+        </section>
 
-    <ul>
-        <li> Email: <a href="rythomas2525@gmail.com">rythomas2525@gmail.com</a>
-        </li>
-        <li>GitHub: <a href="https://github.com/rythomas2525">rythomas2525</a>
-        </li>
-        <li>Portfolio: <a href="">Coming Soon</a></li>
-    </ul>
-
+    </header>
 </body>
 
 </html>
